--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "barryvdh/laravel-snappy": "^1.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.5",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "stripe/stripe-php": "^16.5"
     },
